--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "eslint": "^8.15.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "puppeteer": "^14.1.0",
+    "readline": "^1.3.0"
   }
 }
