--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.6",
     "eslint": "^8.15.0",
+    "mocha": "^10.0.0",
     "prettier": "^2.6.2",
     "puppeteer": "^14.1.0",
     "readline": "^1.3.0"
